# bevy_sandbox

./: Cargo.toml  README.md  rustfmt.toml  todo.md
assets/models/chess/: bishop.glb  king.glb  knight.glb  pawn.glb  queen.glb  rook.glb
src/: audio.rs  camera.rs  chess_piece.rs  end_game.rs  light.rs  log.rs  main.rs  move_info.rs  move_tracker.rs  settings.rs  splash.rs  square.rs
src/board/: color.rs  mod.rs  position.rs  select.rs  selection.rs  spawn.rs  square.rs
src/game/: audio.rs  camera.rs  light.rs  mod.rs  move_info.rs  move_tracker.rs  settings.rs  start.rs  team.rs
src/game/audio/: mod.rs
src/game/board/: color.rs  mod.rs  selection.rs  spawn.rs  square.rs
src/game/camera/: mod.rs
src/game/light/: kelvin.rs  mod.rs
src/game/physics/: mod.rs  motion.rs
src/game/piece/: available_moves.rs  color.rs  (+5 more)
src/menu/: main_menu.rs  mod.rs
src/physics/: mod.rs  motion.rs
src/piece/: available_moves.rs  color.rs  mod.rs  movement.rs  piece_type.rs  select.rs  selection.rs  spawn.rs
src/position/: file.rs  mod.rs  rank.rs
src/resources/: active_color.rs  attacked_positions.rs  available_moves.rs  board_state.rs  castle_availability.rs  en_passant.rs  en_passant_tracker.rs  game_mode.rs  game_state.rs  halfmove_tracker.rs  mod.rs  move_history.rs  pending_move.rs  scoreboard.rs  theme.rs
src/setup/: board.rs  camera.rs  fen.rs  light.rs  mod.rs  pickable.rs  pieces.rs
src/traits/: mod.rs  object_3d.rs
src/turn/: end.rs  game_start.rs  mod.rs  move_piece.rs  select_move.rs  select_piece.rs  select_square.rs  start.rs  update_board_state.rs
(+32 files in other folders)
